[workspace]
resolver = "2"
members = [
    "ed255190-host",
    "ed255190-guest",
    "examples/host",
    "examples/methods"
]

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true

[profile.release.build-override]
opt-level = 3